@@ -2,31 +2,32 @@ package me.kubbidev.nexuspowered.menu;
 
 import com.google.common.collect.Lists;
 import com.google.common.math.IntMath;
+import java.math.RoundingMode;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.function.Function;
+import java.util.function.IntFunction;
+import net.kyori.adventure.text.Component;
 import org.bukkit.entity.Player;
 import org.bukkit.event.inventory.InventoryType;
 import org.bukkit.inventory.Inventory;
 import org.bukkit.inventory.InventoryHolder;
 import org.bukkit.inventory.ItemStack;
 
-import java.math.RoundingMode;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.function.Function;
-import java.util.function.IntFunction;
-
 public abstract class MenuPaginated<T> extends Menu {
+
     private int page = 1;
 
     private IntFunction<ItemStack> prevPageItem;
     private IntFunction<ItemStack> nextPageItem;
-    private int prevPageSlot = -1;
-    private int nextPageSlot = -1;
+    private int                    prevPageSlot = -1;
+    private int                    nextPageSlot = -1;
 
     public MenuPaginated(int size) {
         super(size);
     }
 
-    public MenuPaginated(int size, String title) {
+    public MenuPaginated(int size, Component title) {
         super(size, title);
     }
 
@@ -34,7 +35,7 @@ public abstract class MenuPaginated<T> extends Menu {
         super(type);
     }
 
-    public MenuPaginated(InventoryType type, String title) {
+    public MenuPaginated(InventoryType type, Component title) {
         super(type, title);
     }
 
@@ -47,16 +48,16 @@ public abstract class MenuPaginated<T> extends Menu {
      *
      * @return a {@link List} of {@link T} objects.
      */
-    public abstract List<T> contents();
+    public abstract List<T> getContents();
 
     /**
-     * Retrieves a list of integers representing the slot indices
-     * within the inventory where the content for the current page is displayed.
+     * Retrieves a list of integers representing the slot indices within the inventory where the content for the current
+     * page is displayed.
      *
-     * @return a {@link List} of {@link Integer} objects, each representing an
-     * inventory slot index used for displaying content on the current page.
+     * @return a {@link List} of {@link Integer} objects, each representing an inventory slot index used for displaying
+     * content on the current page.
      */
-    public abstract List<Integer> contentSlots();
+    public abstract List<Integer> getContentSlots();
 
     /**
      * Set the item at the specified inventory slot to open the previous page.
@@ -80,7 +81,7 @@ public abstract class MenuPaginated<T> extends Menu {
      * @param item the item to set
      */
     public void prevPageItem(int slot, ItemStack item) {
-        prevPageItem(slot, page -> item);
+        this.prevPageItem(slot, page -> item);
     }
 
     /**
@@ -105,7 +106,7 @@ public abstract class MenuPaginated<T> extends Menu {
      * @param item the item to set
      */
     public void nextPageItem(int slot, ItemStack item) {
-        nextPageItem(slot, page -> item);
+        this.nextPageItem(slot, page -> item);
     }
 
     /**
@@ -120,37 +121,35 @@ public abstract class MenuPaginated<T> extends Menu {
 
     @Override
     protected void redraw(Player viewer) {
-        List<Integer> slots = new ArrayList<>(contentSlots());
-        List<List<T>> pages = Lists.partition(contents(), slots.size());
+        List<Integer> slots = new ArrayList<>(this.getContentSlots());
+        List<List<T>> pages = Lists.partition(this.getContents(), slots.size());
 
-        normalizePage(pages.size());
-        if (!isFirstDraw()) {
+        this.normalizePage(pages.size());
+        if (!this.isFirstDraw()) {
             slots.forEach(this::removeItem);
         }
 
         List<T> currentPage = pages.isEmpty() ? new ArrayList<>() : pages.get(this.page - 1);
         for (T item : currentPage) {
-            setItem(slots.remove(0), viewer, item);
+            this.setItem(slots.removeFirst(), viewer, item);
         }
 
-        drawPageItems(pages.size());
+        this.drawPageItems(pages.size());
     }
 
     protected void drawPageItems(int maxPages) {
         if (this.page > 1 && this.prevPageItem != null) {
-            setItem(this.prevPageSlot, this.prevPageItem.apply(this.page - 1),
-                    e -> prevPage((Player) e.getWhoClicked()));
-
+            this.setItem(this.prevPageSlot, this.prevPageItem.apply(this.page - 1),
+                e -> prevPage((Player) e.getWhoClicked()));
         } else if (this.prevPageSlot >= 0) {
-            removeItem(this.prevPageSlot);
+            this.removeItem(this.prevPageSlot);
         }
 
         if (this.page < maxPages && this.nextPageItem != null) {
-            setItem(this.nextPageSlot, this.nextPageItem.apply(this.page + 1),
-                    e -> nextPage((Player) e.getWhoClicked()));
-
+            this.setItem(this.nextPageSlot, this.nextPageItem.apply(this.page + 1),
+                e -> nextPage((Player) e.getWhoClicked()));
         } else if (this.nextPageSlot >= 0) {
-            removeItem(this.nextPageSlot);
+            this.removeItem(this.nextPageSlot);
         }
     }
 
@@ -159,16 +158,16 @@ public abstract class MenuPaginated<T> extends Menu {
     }
 
     public void nextPage(Player viewer) {
-        drawPage(viewer, ++this.page);
+        this.drawPage(viewer, ++this.page);
     }
 
     public void prevPage(Player viewer) {
-        drawPage(viewer, --this.page);
+        this.drawPage(viewer, --this.page);
     }
 
     public void drawPage(Player viewer, int page) {
         this.page = page;
-        redraw(viewer);
+        this.redraw(viewer);
     }
 
     public int currentPage() {
@@ -180,11 +179,10 @@ public abstract class MenuPaginated<T> extends Menu {
     }
 
     public boolean isLastPage() {
-        return this.page == maxPages();
+        return this.page == this.maxPages();
     }
 
     public int maxPages() {
-        return IntMath.divide(contents().size(), contentSlots().size(),
-                RoundingMode.CEILING);
+        return IntMath.divide(this.getContents().size(), this.getContentSlots().size(), RoundingMode.CEILING);
     }
 }
